[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-pentest-langchain"
version = "1.0.0"
description = "AI Cyber Security Agent CLI with LangChain & LangGraph"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9",
    "rich>=13",
    "pyyaml>=6",
    "pydantic>=2",
    "python-dotenv>=1",
    "langchain>=0.3",
    "langchain-google-genai>=1.0",
    "langgraph>=0.2",
    "langgraph-checkpoint-sqlite>=2.0",
    "pyfiglet>=1.0"
]

[project.scripts]
ai-pentest = "cli:app"

[tool.setuptools]
py-modules = ["cli"]
include-package-data = true

[tool.setuptools.packages.find]
include = ["agent*", "utils*"]

[tool.setuptools.package-data]
"*" = ["config.yaml", "prompts/*.yaml"]
